fix about text alignment, font syntax, and card headings

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -18,6 +18,7 @@
   position: relative;
   overflow: hidden;
   z-index: 1;
+  display: flex;
 }
 
 .about__title {
@@ -36,14 +37,13 @@
   padding: 0 80px 173px 0;
   max-width: 660px;
   margin-left: auto;
-  position: relative;
-  top: -85px;
+  margin-top: 119px;
 }
 
 .about__paragraph {
   margin: 0;
   padding-bottom: 20px;
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
   color: #fff;
