--- a/blocks/header.css
+++ b/blocks/header.css
@@ -24,7 +24,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-size: 60px;
   line-height: 72px;
@@ -34,7 +34,7 @@
 .header__description {
   max-width: 683px;
   margin: 0;
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
   padding-top: 28px;
