--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -23,7 +23,7 @@
   padding-bottom: 100px;
   text-align: center;
   margin: auto;
-  font-family: "Noto Serif", Times New Roman, serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
